--- a/src/template/editor.css
+++ b/src/template/editor.css
@@ -1,3 +1,9 @@
 a {
     color: black;
     text-decoration: none;}
+    
+    textarea {
+        resize: vertical;
+        width: -webkit-fill-available;
+        height: 120px;
+    }
